# medata-shuttle

./: .gitignore  Cargo.toml  Shuttle.toml
models/: Cargo.toml
models/migrations/: 20230415200225_schema.sql  20240324084948_kawasaki.sql
models/src/: lib.rs
models/src/auth/: session.rs  user.rs
models/src/documents/: document.rs  enrollgroup.rs  mod.rs  participant.rs  physical.rs  samples.rs
models/src/documents/tests/: bloodtest.rs  echocardiography.rs  liverfunction.rs  mod.rs  othertest.rs
service/: Cargo.toml
service/src/: lib.rs  router.rs
service/src/controller/: add.rs  auth.rs  detail.rs  list.rs  mod.rs  update.rs
src/: main.rs
