[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "chrono", "postgres"] }
