[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
models = { path = "../models" }
serde = { version = "1.0.203", features = ["derive"] }
time = "0.3.36"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
